<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Privacy Policy" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_a" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/personal_information" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_b" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/third_party_service" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_c" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/adversiting" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_d" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/disclaimer" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_e" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
