<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/putih">
    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/merahtua"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Privacy Policy" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_a" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/personal_information" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_b" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/third_party_service" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_c" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/adversiting" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_d" />
            <TextView
                android:textColor="@color/hitam"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/disclaimer" />
            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="⛔️This application is only made for Taylor Swift fans" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="⛔️ this application is only made for entertainment" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="⛔️ We do not provide download services in any form" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="⛔️ This application uses third parties in providing all services" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="⛔️ this application does not contain negative content, adult content that smells of porn or nudity and open clothing" />

            <TextView
                android:textColor="@color/hitam"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="⛔️ this application contains advertising services that are very relevant so as not to reduce the convenience of the users" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>